--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -34,45 +34,45 @@ body {
   color: #ffffff;
 }
 
-.box {
-  position: relative;
-  top: 0;
-  opacity: 1;
-  float: left;
-  padding: 60px 50px 40px 50px;
-  width: 100%;
-  background: #fff;
-  border-radius: 10px;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  z-index: 5;
-  max-width: 330px;
-}
+// .box {
+//   position: relative;
+//   top: 0;
+//   opacity: 1;
+//   float: left;
+//   padding: 60px 50px 40px 50px;
+//   width: 100%;
+//   background: #fff;
+//   border-radius: 10px;
+//   transform: scale(1);
+//   -webkit-transform: scale(1);
+//   -ms-transform: scale(1);
+//   z-index: 5;
+//   max-width: 330px;
+// }
 
-.box.back {
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  top: -20px;
-  opacity: .8;
-  z-index: -1;
-}
+// .box.back {
+//   transform: scale(.95);
+//   -webkit-transform: scale(.95);
+//   -ms-transform: scale(.95);
+//   top: -20px;
+//   opacity: .8;
+//   z-index: -1;
+// }
 
-.box:before {
-  content: "";
-  width: 100%;
-  height: 30px;
-  border-radius: 10px;
-  position: absolute;
-  top: -10px;
-  background: rgba(255, 255, 255, .6);
-  left: 0;
-  transform: scale(.95);
-  -webkit-transform: scale(.95);
-  -ms-transform: scale(.95);
-  z-index: -1;
-}
+// .box:before {
+//   content: "";
+//   width: 100%;
+//   height: 30px;
+//   border-radius: 10px;
+//   position: absolute;
+//   top: -10px;
+//   background: rgba(255, 255, 255, .6);
+//   left: 0;
+//   transform: scale(.95);
+//   -webkit-transform: scale(.95);
+//   -ms-transform: scale(.95);
+//   z-index: -1;
+// }
 
 .login-wrapper .example-form {
   min-width: 100%;
@@ -109,16 +109,4 @@ body {
 
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
-}
-
-.selector {
-  background-image: url("./assets/images/backgroundImage.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.image-lookup {
-  background-image: url("./assets/images/background_image.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
